Tue Sep 11 13:49:33 BST 2007  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Mon Sep 10 10:29:40 BST 2007  Colin Watson  <cjwatson@debian.org>

	* docs/TODO: Miscellaneous updates.

Mon Sep 10 10:26:57 BST 2007  Colin Watson  <cjwatson@debian.org>

	* docs/INSTALL.autoconf: Update to instructions from Autoconf 2.61.

Mon Sep 10 10:20:23 BST 2007  Colin Watson  <cjwatson@debian.org>

	* manual/misc.me (NLS message catalogues): Update Translation
	  Project URL.

Mon Sep 10 10:17:43 BST 2007  Colin Watson  <cjwatson@debian.org>

	* manual/Makefile: Rename to ...
	* manual/Makefile.in: ... this. Write out a version file with the
	  current version of man-db.
	* manual/man_db.me: Use the automatically-generated version file
	  rather than hardcoding the version. Set the manual version to
	  simply the version of man-db.
	* configure.ac (AC_CONFIG_FILES): Add manual/Makefile.
	* GNUmakefile.in (_manual): Distribute manual/Makefile.in rather
	  than manual/Makefile.
	* .bzrignore: Update.

Mon Sep 10 09:17:17 BST 2007  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.0-pre1. I mistakenly used version 2.4.5-pre1 earlier.

Mon Sep 10 09:11:05 BST 2007  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Mon Sep 10 00:15:31 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Upgrade to gettext 0.16.1.
	* .bzrignore: Update ignores.

Sun Sep  9 23:49:37 BST 2007  Daniel Nylander  <po@danielnylander.se>

	* po/sv.po: Update from Translation Project.

Sun Sep  9 22:50:22 BST 2007  Colin Watson  <cjwatson@debian.org>

	* manual/format.me (Format scripts): Adjust for renaming of
	  tools/mandb_[nt]fmt-script to tools/mandb_fmt-script.

Sun Sep  9 21:03:25 BST 2007  Colin Watson  <cjwatson@debian.org>

	* manual/comp.me (Compressed manual pages): Using compressed manual
	  pages is perfectly reasonable these days; stop recommending
	  against it.
